--- a/iBank/iBank/Base.lproj/Main.storyboard
+++ b/iBank/iBank/Base.lproj/Main.storyboard
@@ -27,6 +27,8 @@
             <string>MicrosoftYaHei</string>
             <string>MicrosoftYaHei</string>
             <string>MicrosoftYaHei</string>
+            <string>MicrosoftYaHei</string>
+            <string>MicrosoftYaHei</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -282,19 +284,36 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="QiN-yJ-g9w">
-                                <rect key="frame" x="16" y="40" width="992" height="720"/>
+                                <rect key="frame" x="16" y="70" width="992" height="690"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="yYP-gS-Vri" id="kVe-mj-LFV"/>
                                     <outlet property="delegate" destination="yYP-gS-Vri" id="2pX-6M-FB7"/>
                                 </connections>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lpB-CC-fTY">
+                                <rect key="frame" x="16" y="30" width="139" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="cq6-RX-ltJ"/>
+                                    <constraint firstAttribute="width" constant="139" id="j88-Ij-Awe"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="MicrosoftYaHei" family="Microsoft YaHei" pointSize="25"/>
+                                <state key="normal" title="2015-05">
+                                    <color key="titleColor" red="1" green="0.62745098040000002" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onTouchYearMonth:" destination="yYP-gS-Vri" eventType="touchUpInside" id="Gln-CI-fbn"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="QiN-yJ-g9w" firstAttribute="top" secondItem="6rU-2e-piT" secondAttribute="bottom" constant="20" id="5S3-1Q-Pyq"/>
                             <constraint firstAttribute="bottom" secondItem="QiN-yJ-g9w" secondAttribute="bottom" constant="8" id="B2Y-x7-ZAC"/>
+                            <constraint firstItem="lpB-CC-fTY" firstAttribute="top" secondItem="6rU-2e-piT" secondAttribute="bottom" constant="10" id="Fvx-O0-4rr"/>
                             <constraint firstItem="QiN-yJ-g9w" firstAttribute="leading" secondItem="SzK-h0-O4h" secondAttribute="leading" constant="16" id="QoI-PG-kdt"/>
+                            <constraint firstItem="lpB-CC-fTY" firstAttribute="leading" secondItem="SzK-h0-O4h" secondAttribute="leading" constant="16" id="mLZ-CW-lmo"/>
+                            <constraint firstItem="QiN-yJ-g9w" firstAttribute="top" secondItem="lpB-CC-fTY" secondAttribute="bottom" constant="10" id="oyu-c0-wxF"/>
                             <constraint firstAttribute="trailing" secondItem="QiN-yJ-g9w" secondAttribute="trailing" constant="16" id="zTb-xa-RQ8"/>
                         </constraints>
                     </view>
@@ -302,6 +321,7 @@
                     <size key="freeformSize" width="1024" height="768"/>
                     <connections>
                         <outlet property="tableView" destination="QiN-yJ-g9w" id="JTt-Ye-JVx"/>
+                        <outlet property="yearMonthButton" destination="lpB-CC-fTY" id="6bE-Pl-Ad7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="klb-1C-2Ng" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -320,8 +340,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QIN-7L-S4G">
+                                <rect key="frame" x="16" y="30" width="139" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="4Ug-Ey-qxC"/>
+                                    <constraint firstAttribute="width" constant="139" id="zBB-Ro-FQQ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="MicrosoftYaHei" family="Microsoft YaHei" pointSize="25"/>
+                                <state key="normal" title="2015-05">
+                                    <color key="titleColor" red="1" green="0.62745098040000002" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="onTouchYearMonth:" destination="C2c-yL-OgO" eventType="touchUpInside" id="2zO-vh-Nal"/>
+                                </connections>
+                            </button>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Fsp-lm-jHH">
-                                <rect key="frame" x="16" y="40" width="992" height="720"/>
+                                <rect key="frame" x="16" y="70" width="992" height="690"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="C2c-yL-OgO" id="RS6-Rd-cDc"/>
@@ -331,8 +366,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Fsp-lm-jHH" firstAttribute="top" secondItem="BM3-sq-v3F" secondAttribute="bottom" constant="20" id="A80-Fr-mP0"/>
+                            <constraint firstItem="Fsp-lm-jHH" firstAttribute="top" secondItem="QIN-7L-S4G" secondAttribute="bottom" constant="10" id="3E9-Ro-W3O"/>
+                            <constraint firstItem="QIN-7L-S4G" firstAttribute="leading" secondItem="srv-OM-1c2" secondAttribute="leading" constant="16" id="C72-k4-acb"/>
                             <constraint firstItem="Fsp-lm-jHH" firstAttribute="leading" secondItem="srv-OM-1c2" secondAttribute="leading" constant="16" id="Egl-pT-vvg"/>
+                            <constraint firstItem="QIN-7L-S4G" firstAttribute="top" secondItem="BM3-sq-v3F" secondAttribute="bottom" constant="10" id="c6G-rk-vfA"/>
                             <constraint firstAttribute="trailing" secondItem="Fsp-lm-jHH" secondAttribute="trailing" constant="16" id="ePD-ns-lGf"/>
                             <constraint firstItem="KqD-qx-FpN" firstAttribute="top" secondItem="Fsp-lm-jHH" secondAttribute="bottom" constant="8" id="weA-e3-kqN"/>
                         </constraints>
@@ -559,7 +596,7 @@
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qza-b1-y1m">
                                         <rect key="frame" x="190" y="47" width="139" height="30"/>
                                         <fontDescription key="fontDescription" name="MicrosoftYaHei" family="Microsoft YaHei" pointSize="20"/>
-                                        <state key="normal" title="2015-05-08">
+                                        <state key="normal" title="2015-05">
                                             <color key="titleColor" red="1" green="0.62745098040000002" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
