--- a/iBank/iBank/Base.lproj/Main.storyboard
+++ b/iBank/iBank/Base.lproj/Main.storyboard
@@ -378,6 +378,7 @@
                     <size key="freeformSize" width="1024" height="768"/>
                     <connections>
                         <outlet property="tableView" destination="Fsp-lm-jHH" id="8pg-TH-0SM"/>
+                        <outlet property="yearMonthButton" destination="QIN-7L-S4G" id="Gpg-iK-Deh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wvI-WO-tCQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
